# spatial-maker

./: .gitignore  CLAUDE.md  COREML_IMPLEMENTATION.md  Cargo.toml  LICENSE  README.md  RUST_README.md  benchmark.py  build.rs  estimate.py  pipeline.py  pyproject.toml
benchmarking/: compare.py
benchmarking/benchmarks/: results.tsv
benchmarks/: results.json
depth_estimators/: __init__.py  apple_depth_pro.py  depth_anything_v2.py  video_depth_anything.py
examples/: photo.rs  photo_coreml.rs
research/: coreml-benchmark-results.md  coreml-conversion-results.md  rust-depth.md  session-summary.md
scripts/: depth_pro.py  depth_to_stereo.py  download_coreml_models.sh  downscale_video.py  stereo_converter.py  stitch_video.py  upload_to_huggingface.md
scripts/coreml_conversion/: README.md  convert_to_coreml.py
src/: depth.rs  depth_coreml.rs  depth_filter.rs  error.rs  image_loader.rs  lib.rs  main.rs  model.rs  output.rs  stereo.rs  video.rs
swift-bridge/: CoreMLDepth.swift  README.md
todos/: _top.md  spatial-settings-overhaul.md
