[package]
name = "spatial-maker"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Convert 2D images and videos to stereoscopic 3D spatial content for Apple Vision Pro using AI depth estimation"
keywords = ["spatial-video", "3d", "stereoscopic", "apple-vision-pro", "depth-estimation"]
categories = ["multimedia::images", "computer-vision"]
repository = "https://github.com/mrgnw/spatial-maker"
readme = "RUST_README.md"
rust-version = "1.75"
exclude = [
	"spatial-maker-rust/",
	"test_*.jpg",
	"*.py",
	"benchmarking/",
	"samples/",
	"todos/",
	"output/",
	"checkpoints/",
	"__pycache__/",
	".venv/",
	"scripts/",
	"research/",
	"pyproject.toml",
	"uv.lock",
	"pipeline.py",
	"CLAUDE.md",
	"COREML_IMPLEMENTATION.md",
]

[lib]
name = "spatial_maker"
path = "src/lib.rs"

[[bin]]
name = "spatial-maker"
path = "src/main.rs"
required-features = ["coreml"]

[features]
default = ["coreml", "cli"]
coreml = []
onnx = ["dep:ort"]
cli = ["dep:clap", "dep:indicatif", "dep:console"]

# Native format decoders (optional - falls back to ffmpeg if not enabled)
avif = ["image/avif"]
jxl = ["dep:jxl-oxide"]
heic = ["dep:libheif-rs"]
native-formats = ["avif", "jxl", "heic"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] }
ndarray = "0.16"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
dirs = "5.0"
tracing = "0.1"
flate2 = "1"
tar = "0.4"

# Optional: ONNX Runtime backend
ort = { version = "2.0.0-rc.11", features = ["half", "download-binaries"], optional = true }

# Optional native decoders
jxl-oxide = { version = "0.9", optional = true }
libheif-rs = { version = "2.1", optional = true }

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.indicatif]
version = "0.17"
optional = true

[dependencies.console]
version = "0.15"
optional = true

[dev-dependencies]
tempfile = "3.8"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[[example]]
name = "photo_coreml"
path = "examples/photo_coreml.rs"
required-features = ["coreml"]

[[example]]
name = "photo"
path = "examples/photo.rs"
required-features = ["onnx"]
