[project]
name = "spatial-maker"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "depth-pro",
    "easydict>=1.13",
    "einops>=0.8.1",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.11.0.86",
    "psutil>=7.2.0",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

dependencies = [
    "torch>=2",
    "torchvision",
    "huggingface_hub",
    "numpy<2",
    "pillow",
    "timm",
]

[tool.uv.sources]
depth-pro = { git = "https://github.com/apple/ml-depth-pro.git" }
