[project]
name = "spatial-maker"
version = "0.1.0"
description = "Convert 2D videos to stereoscopic 3D spatial videos for Apple Vision Pro using AI depth estimation"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["spatial-video", "3d", "stereoscopic", "apple-vision-pro", "depth-estimation"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Topic :: Multimedia :: Video :: Conversion",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Operating System :: MacOS",
]
dependencies = [
	"jkp-depth-anything-v2",
	"numpy",
	"opencv-python>=4.11.0.86",
	"torch>=2",
	"tqdm>=4.67.1",
]

[project.scripts]
spatial-maker = "pipeline:main"

[project.urls]
Homepage = "https://github.com/mrgnw/spatial-maker"
Repository = "https://github.com/mrgnw/spatial-maker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
	"pipeline.py",
	"scripts/depth_to_stereo.py",
	"scripts/downscale_video.py",
	"pyproject.toml",
	"README.md",
	"LICENSE",
]

[tool.hatch.build.targets.wheel]
only-include = [
	"pipeline.py",
	"scripts/depth_to_stereo.py",
	"scripts/downscale_video.py",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
